--- a/style.css
+++ b/style.css
@@ -6,13 +6,12 @@ body > h1 {
 }
 main {
     display: flex;
-    
     justify-content: center;
     height: 100%;
 }
 body > main > textarea {
-    width: 45vw;
-    height: 85vh;
+    width: 542px;
+    height: 644px;
     border: 2px solid black; 
 }
 body > main > div.preview{
@@ -22,8 +21,6 @@ body > main > div.preview{
 }
 .button {
     display: flex;
-  
-   
     align-items: center;
     padding: 10px;
 }
